--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header sec-bg">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -30,7 +30,31 @@
             <img class="banner-pp" src="images/hardy.png" alt="">
         </div>
     </header>
-    <main></main>
+    <main>
+        <section class="about sec-bg">
+            <h3 class="shared-title">About Me</h3>
+            <p class="shared-desc">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>
+        <div class="about-items">
+            <!-- .about-item*4>p.item-title+p.item-desc -->
+            <div class="about-item">
+                <p class="item-title">Name</p>
+                <p class="item-desc">Hardy Mary</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">Email</p>
+                <p class="item-desc">info@gmail.com</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">Date of birth:</p>
+                <p class="item-desc">11 November 1987</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">From:</p>
+                <p class="item-desc">Los Angeles, USA</p>
+            </div>
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
